# kamping

./: CLAUDE.md  CMakeLists.txt
examples/usage/: CMakeLists.txt  alltoallv_adapter_example.cpp  mdspan_example.cpp  recv_example.cpp
examples/v2/: CMakeLists.txt  collectives_example.cpp  kokkos_alltoallv_example.cpp  kokkos_send_recv_example.cpp  send_recv_example.cpp
include/kamping/: mpi_datatype.hpp  mpi_ops.hpp
include/kamping/adapter/: mdspan_apater.hpp
include/kamping/comm_helper/: infer_rbuf_vals_from.hpp
include/kamping/data_buffers/: data_buffer_concepts.hpp  extended_db.hpp  pipe_db.hpp
include/kamping/v2/: TODO.md  comm_op.hpp  infer.hpp  iresult.hpp  ranges.hpp  tags.hpp  views.hpp
include/kamping/v2/collectives/: allgather.hpp  allgatherv.hpp  alltoall.hpp  alltoallv.hpp  barrier.hpp  bcast.hpp  gather.hpp  gatherv.hpp  reduce.hpp  scatter.hpp  scatterv.hpp
include/kamping/v2/contrib/: cereal_view.hpp  kokkos_view.hpp  mdspan_view.hpp
include/kamping/v2/p2p/: irecv.hpp  isend.hpp  isendrecv.hpp  recv.hpp  sendrecv.hpp
include/kamping/v2/ranges/: adaptor.hpp  adaptor_closure.hpp  all.hpp  concepts.hpp  ranges.hpp  view_interface.hpp
include/kamping/v2/views/: adaptor.hpp  all.hpp  auto_counts_view.hpp  auto_displs_view.hpp  auto_recv_v.hpp  resize_view.hpp  (+9 more)
include/mpi/: buffer.hpp  comm.hpp  handle.hpp  mpi_span.hpp  sentinels.hpp  status.hpp
include/mpi/collectives/: allgather.hpp  allgatherv.hpp  alltoall.hpp  alltoallv.hpp  barrier.hpp  bcast.hpp  reduce.hpp
include/mpi/p2p/: imrecv.hpp  irecv.hpp  isend.hpp  isendrecv.hpp  mprobe.hpp  mrecv.hpp  probe.hpp  recv.hpp  send.hpp  sendrecv.hpp
kamping-types/: README.md
tests/: CMakeLists.txt  mpi_datatype_test.cpp  mpi_operation_wrapper_test.cpp
tests/v2/: CMakeLists.txt  auto_counts_view_test.cpp  sentinels_test.cpp  v2_allgatherv_test.cpp  v2_allreduce_test.cpp  v2_alltoall_test.cpp  v2_alltoallv_test.cpp  v2_gather_test.cpp  v2_gatherv_test.cpp  v2_reduce_test.cpp  v2_scatter_test.cpp  v2_scatterv_test.cpp
(+3 files in other folders)
